<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_dehaze_24dp"
            android:title="@string/listado" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_24dp"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_grade_24dp"
            android:title="@string/favoritos" />


    </group>

    <item android:title="@string/otros">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_setting_light"
                android:title="@string/configuracion" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_24dp"
                android:title="@string/informacion" />
            <item
                android:id="@+id/nav_comment"
                android:icon="@drawable/ic_question_answer_24dp"
                android:title="@string/comments" />
        </menu>
    </item>

</menu>
