<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/listaBack">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/zona"
            android:id="@+id/textView"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtZona" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:id="@+id/imgQcalidad"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#3f51b5"
            android:src="@mipmap/ic_q_calidad"
            android:padding="2dp"
            android:layout_margin="2dp" />

        <ImageView
            android:id="@+id/imgBanderaAzul"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#2196f3"
            android:src="@mipmap/ic_bandera_azul"
            android:padding="2dp"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#e91e63"
            android:src="@mipmap/ic_accesible"
            android:padding="2dp"
            android:id="@+id/imgAccesible"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#f44336"
            android:src="@mipmap/ic_ducha"
            android:padding="2dp"
            android:id="@+id/imgDucha"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#9c27b0"
            android:src="@mipmap/ic_hosteleria"
            android:padding="2dp"
            android:id="@+id/imgHosteleria"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#673ab7"
            android:src="@mipmap/ic_parking"
            android:padding="2dp"
            android:id="@+id/imgParking"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#795548"
            android:src="@mipmap/ic_pesca"
            android:padding="2dp"
            android:id="@+id/imgPesca"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#009688"
            android:src="@mipmap/ic_salvamento"
            android:padding="2dp"
            android:id="@+id/imgSalvamento"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#4caf50"
            android:src="@mipmap/ic_servicios"
            android:padding="2dp"
            android:id="@+id/imgServicios"
            android:layout_margin="2dp" />

        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:visibility="gone"
            android:background="#ff9800"
            android:src="@mipmap/ic_surf"
            android:padding="2dp"
            android:id="@+id/imgSurf"
            android:layout_margin="2dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/descripcion"
            android:id="@+id/textView2"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtDescripcion" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/accesos"
            android:id="@+id/textView3"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtAccesos" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tipo"
            android:id="@+id/textView4"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtTipo" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/longitud"
            android:id="@+id/textView5"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtLongitud" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/observaciones"
            android:id="@+id/textView6"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtObservaciones" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/coordenadas"
            android:id="@+id/textView7"
            android:textColor="#bdbdbd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtCoordenadas" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    </View>



</LinearLayout>